Input Feilds: Fixed alignment issues

--- a/styles/_input-fields.scss
+++ b/styles/_input-fields.scss
@@ -61,23 +61,23 @@
         font-weight: 400;
         color: $txt-ter;
         position: absolute;
-        bottom: 12px;
+        bottom: 13px;
         box-sizing: border-box;
         left: 0;
         width: auto;
         height: auto;
         pointer-events: none;
         // border: 1px solid blue;
-        padding: 0 0 12px 10.5px;
+        padding: 0 0 11px 12.5px;
         transition: all 150ms ease-out;
       }
       input {
         color: $txt-sec;
         width: 400px;
         margin: 10px 0;
-        // padding: 22px 0 9px 10px;
+        padding: 25px 10px 8px 12px;
         height: 50px;
-        padding-left: 10px;
+        line-height: 50px;
         font-size: 15px;
         border-radius: 6px;
         border: none;
@@ -86,7 +86,7 @@
         border: 1px solid #77737d;
         &:focus + label,
         &:valid + label {
-          transform: translateY(-11px);
+          transform: translateY(-13px);
           color: $primary;
           font-size: 12px;
           font-weight: 500;
